--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 	<!-- DO NOT CHANGE ANYTHING ABOVE THIS LINE-->
 
 	<!-- Javascript Framework (e.g., vue.js) (ADD HERE) -->
+	<script src="https://unpkg.com/vue@3"></script>
 
 
 </head>
 
   <body>
-	<div class="container">
+	<div class="container vue_app">
 
 	    <div class="header">
 
