--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 	</div>
 
   	<!-- This load the Vue.js code -->
-	<script type="text/javascript" src="site.js"></script>
+	<script type="text/javascript" src="site.js">
+
+	</script>
 
 
 </body>
