--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 						<p class="title">{{ movies[index].title }} ({{ movies[index].country }})</p>
 						<p class="score"><i class="fa fa-star" aria-hidden="true"></i> {{ movies[index].iscore }} </p>
 						<p class="runtime">Runtime: {{ movies[index].runtime }}</p>
-						<p class="released">Released: {{ movies[index].released }} | Rated: {{ movies[index].rating }}</p>
+						<p class="released">Released: {{ getMonthText(movies[index].released) }} | Rated: {{ movies[index].rating }}</p>
 						<p class="websites">Websites: <a>{{ movies[index].imdb }}</a> | <a>{{ movies[index].website }}</a></p>
 
 			            <div class="social">
-			              <p class="likes"><i class="fa fa-thumbs-up" aria-hidden="true"></i> {{ movies[index].likes }}</p>
+			              <p @click="count++" class="likes"><i class="fa fa-thumbs-up" aria-hidden="true"></i> {{ count }}</p>
 			              <p class="dislikes"><i class="fa fa-thumbs-down" aria-hidden="true"></i> {{ movies[index].dislikes }}</p>
 			            </div>
 	            </div>
