--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	            <div class="thumbnail">
 
 						<img v-on:click="posterClick(index)" class="poster" :src="movie.posters[movie.posterindex]">
-						<div class="imageInfo">{{ movie.posterindex }}</div>
+						<div class="imageInfo">{{ movie.posterindex + 1}} of {{ movies[index].posters.length}}</div>
 
 						<p class="title">{{ movies[index].title }} ({{ movies[index].country }})</p>
 						<p class="score"><i class="fa fa-star" aria-hidden="true"></i> {{ movies[index].iscore }} </p>
