--- a/index.html
+++ b/index.html
@@ -17,7 +17,27 @@
 
 	<!-- Javascript Framework (e.g., vue.js) (ADD HERE) -->
 	<script src="https://unpkg.com/vue@3"></script>
-
+	<style>
+		.score {
+			border-radius: 50%;
+		}
+		.likes {
+			background-color: #008700;
+			color: #ffffff;
+		}
+		.dislikes {
+			background-color: #f65a5b;
+			color: #ffffff;
+		}
+		.likes:hover {
+			background-color: #9edd87;
+			color: #008700;
+		}
+		.dislikes:hover {
+			background-color: #fdd6d6;
+			color: #F65A5B;
+		}
+	</style>
 
 </head>
 
